--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Planer MRP</h1>
+<html>
+  <title>Planer MRP</title>
+  
+  <body>
+    <h3>Projekt zaliczeniowy z programowania systemów mobilnych</h3>
+  </body>
+</html>
