--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   
   <body>
     <h3>Projekt zaliczeniowy z programowania systemów mobilnych</h3>
+    <a href="https://github.com/sowplvision/planer-mrp">Link do repozytorium.</a>
   </body>
 </html>
